stage0/tests/compile_fail/types/type_arg.dg
func add(a: i32, b: i32) -> i32 { a + b }
func main() -> i32 { add(true, 4) }
